memory for build increased